Revamp Quick Setup Wizard UI and steps
Improves the MainWP Quick Setup Wizard with a redesigned UI, clearer step descriptions, and enhanced responsive behavior. Updates styles for steps, wizard layout, and bulleted instructions. Adds new feedback and transitions for step completion, refines client and site addition flows, and updates menu items and tooltips for clarity. Removes redundant demo checks and Firefox extension link, and improves accessibility and user guidance throughout the setup process.

--- a/assets/css/mainwp-fomantic.css
+++ b/assets/css/mainwp-fomantic.css
@@ -233,11 +233,11 @@
     width: 35px !important;
 }
 
-.mainwp-ui .ui.dimmer {
+.mainwp-ui:not(.mainwp-ui-setup) .ui.dimmer {
     background: rgba(255, 255, 255, 1);
 }
 
-.mainwp-ui .ui.page.dimmer {
+.mainwp-ui.mainwp-ui:not(.mainwp-ui-setup) .ui.page.dimmer {
     margin-left: 72px;
     margin-top: 57px;
 }
