Rename 'Sites Changes' to 'Network Activity' in logs
Replaces all references to 'Sites Changes' with 'Network Activity' across UI labels, messages, tooltips, and code comments in log modules, widgets, pages, and settings. Also improves filter UI layout, adds tab activation and import sites tip to manage sites, and fixes minor UI and code issues for consistency and clarity.

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -593,6 +593,10 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
     padding: 1em !important;
 }
 
+.mainwp-widget .mainwp-scrolly-overflow .ui.tab.active {
+    height: 100%;
+}
+
 .mainwp-widget .mainwp-widget-footer {
     padding: 1em !important;
 }
