--- a/assets/css/themes/mainwp-default-theme.css
+++ b/assets/css/themes/mainwp-default-theme.css
@@ -218,6 +218,11 @@
   color: #fff;
 }
 
+.mainwp-ui.mainwp-custom-theme .ui.grey.label:not(.basic, .corner) {
+  background-color: var(--mainwp-border) !important;
+  color: var(--mainwp-text-secondary);
+}
+
 .mainwp-ui.mainwp-custom-theme .ui.tag.label {
   background-color: var(--mainwp-light);
 }
@@ -252,6 +257,14 @@
 
 .mainwp-ui.mainwp-custom-theme .ui.label:not(.tag, .transition) .icon {
   color: var(--mainwp-bg-base) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.grey.label:not(.tag, .transition) .icon.green {
+  color: var(--mainwp-green) !important;
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.grey.label:not(.tag, .transition) .icon.red {
+  color: var(--mainwp-red) !important;
 }
 
 /* Icons */
