Update help modal UI and theme styles
Improved the visual appearance and consistency of the help modal by updating card backgrounds, icon opacity, and label text. Added new CSS rules for secondary text and card styling in both dark and default themes. Enhanced clarity of toggle labels and added a recommendation label for first-time users in the guided tour card.

--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -129,6 +129,10 @@
   color: var(--mainwp-text-secondary) !important;
 }
 
+.mainwp-ui.mainwp-custom-theme a:not(.button).grey {
+  color: var(--mainwp-text-secondary) !important;
+}
+
 /* Buttons */
 
 .mainwp-ui.mainwp-custom-theme .ui.button {
@@ -783,6 +787,15 @@
   box-shadow: none;
   border-radius: var(--area-radius);
   -webkit-border-radius: var(--area-radius);
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.cards .primary.card {
+  background-color: var(--mainwp-element-background);
+}
+
+.mainwp-ui.mainwp-custom-theme .ui.cards .secondary.card {
+  background-color: var(--mainwp-element-background-secondary) !important;
+  border-color: var(--mainwp-green) !important;
 }
 
 .mainwp-ui.mainwp-custom-theme .ui.cards .card .description,
