--- a/assets/css/themes/mainwp-default-dark-theme.css
+++ b/assets/css/themes/mainwp-default-dark-theme.css
@@ -1544,6 +1544,7 @@ body.mainwp-ui.mainwp-custom-theme,
 .mainwp-ui.mainwp-custom-theme #mainwp-site-mode-wrap .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme #mainwp-article-uploader-import .mainwp-actions-bar,
 .mainwp-ui.mainwp-custom-theme .mainwp_wfc_tabs_content .mainwp-actions-bar,
+.mainwp-ui.mainwp-custom-theme.mainwp_page_InsightsOverview #mainwp-module-log-overview-sub-header,
 .mainwp-ui.mainwp-custom-theme #mainwp-module-cost-tracker-list-sub-header {
   margin-top: 1em !important;
 }
