Added: Early Access Updates settings

--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -444,6 +444,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
 .mainwp-ui.mainwp_page_SettingsAdvanced #mainwp-main-navigation-container,
 .mainwp-ui.mainwp_page_SettingsEmail #mainwp-main-navigation-container,
 .mainwp-ui.mainwp_page_MainWPTools #mainwp-main-navigation-container,
+.mainwp-ui.mainwp_page_EarlyUpdates #mainwp-main-navigation-container,
 .mainwp-ui.mainwp_page_SettingsInsights #mainwp-main-navigation-container,
 .mainwp-ui.mainwp_page_SettingsApiBackups #mainwp-main-navigation-container,
 .mainwp-ui.mainwp_page_ServerInformation #mainwp-main-navigation-container,
@@ -462,6 +463,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
 .mainwp-ui.mainwp_page_SettingsAdvanced #mainwp-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsEmail #mainwp-second-level-navigation,
 .mainwp-ui.mainwp_page_MainWPTools #mainwp-second-level-navigation,
+.mainwp-ui.mainwp_page_EarlyUpdates #mainwp-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsInsights #mainwp-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsApiBackups #mainwp-second-level-navigation,
 .mainwp-ui.mainwp_page_ServerInformation #mainwp-second-level-navigation,
@@ -479,6 +481,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
 .mainwp-ui.mainwp_page_SettingsAdvanced #mainwp-collapse-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsEmail #mainwp-collapse-second-level-navigation,
 .mainwp-ui.mainwp_page_MainWPTools #mainwp-collapse-second-level-navigation,
+.mainwp-ui.mainwp_page_EarlyUpdates #mainwp-collapse-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsInsights #mainwp-collapse-second-level-navigation,
 .mainwp-ui.mainwp_page_SettingsApiBackups #mainwp-collapse-second-level-navigation,
 .mainwp-ui.mainwp_page_ServerInformation #mainwp-collapse-second-level-navigation,
