--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -118,6 +118,7 @@ table.mainwp-manage-updates-table tbody tr td .mainwp-update-selected-button {
 .mainwp-ui.mainwp_page_SettingsAdvanced .mainwp-content-wrap,
 .mainwp-ui.mainwp_page_SettingsEmail .mainwp-content-wrap,
 .mainwp-ui.mainwp_page_MainWPTools .mainwp-content-wrap,
+.mainwp-ui.mainwp_page_EarlyUpdates .mainwp-content-wrap,
 .mainwp-ui.mainwp_page_SettingsInsights .mainwp-content-wrap,
 .mainwp-ui.mainwp_page_SettingsApiBackups .mainwp-content-wrap,
 .mainwp-ui.mainwp_page_ServerInformation .mainwp-content-wrap,
